created a django project and app, configured different environments, configured templates and static in the base settings, configured both app and core urls , set up a home view, created a base.html and configured index.html to extend from base, brought in some pics as well

--- a/app/templates/portfolio-category.html
+++ b/app/templates/portfolio-category.html
@@ -47,48 +47,19 @@
 		<div id="content" class="site-content">
 			<div id="primary" class="content-area column full">
 				<main id="main" class="site-main">
-				<div class="grid portfoliogrid">
 				
-					<article class="hentry">
-					<header class="entry-header">
-					<div class="entry-thumbnail">
-						<a href="portfolio-item.html"><img src="./images/Jan/aunty-boy-2.jpg" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/></a>
-					</div>
-					<h2 class="entry-title"><a href="portfolio-item.html" rel="bookmark">Sunset Beach</a></h2>
-					<a class='portfoliotype' href='portfolio-category.html'>summer</a>
-					<a class='portfoliotype' href='portfolio-category.html'>woman</a>
-					<a class='portfoliotype' href='portfolio-category.html'>yellow</a>
-					</header>
-					</article>
+				<header class="page-header">
+				<h3 class="page-title">
+					summer
+				</h3>
+				</header>
+				
+				<div class="grid portfoliogrid">
 					
 					<article class="hentry">
 					<header class="entry-header">
 					<div class="entry-thumbnail">
-						<a href="portfolio-item.html"><img src="./images/Jan/boy-2.jpg" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/></a>
-					</div>
-					<h2 class="entry-title"><a href="portfolio-item.html" rel="bookmark">Earl of Moreland</a></h2>
-					<a class='portfoliotype' href='portfolio-category.html'>hat</a>
-					<a class='portfoliotype' href='portfolio-category.html'>woman</a>
-					<a class='portfoliotype' href='portfolio-category.html'>yellow</a>
-					</header>
-					</article>
-					
-					<article class="hentry">
-					<header class="entry-header">
-					<div class="entry-thumbnail">
-						<a href="portfolio-item.html"><img src="./images/Jan/Wonderpark-jan-2.jpg" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="p1"/></a>
-					</div>
-					<h2 class="entry-title"><a href="portfolio-item.html" rel="bookmark">Eliza and John</a></h2>
-					<a class='portfoliotype' href='portfolio-category.html'>summer</a>
-					<a class='portfoliotype' href='portfolio-category.html'>woman</a>
-					<a class='portfoliotype' href='portfolio-category.html'>yellow</a>
-					</header>
-					</article>
-					
-					<article class="hentry">
-					<header class="entry-header">
-					<div class="entry-thumbnail">
-						<a href="portfolio-item.html"><img src="./images/March/Urithi-march-6.jpg" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="p1"/></a>
+						<a href="portfolio-item.html"><img src="./static/images/Jan/me-boy-2.jpg" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/></a>
 					</div>
 					<h2 class="entry-title"><a href="portfolio-item.html" rel="bookmark">Hot Afternoon</a></h2>
 					<a class='portfoliotype' href='portfolio-category.html'>pink</a>
@@ -100,7 +71,7 @@
 					<article class="hentry">
 					<header class="entry-header">
 					<div class="entry-thumbnail">
-						<a href="portfolio-item.html"><img src="./images/March/Urithi-march-4.jpg" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/></a>
+						<a href="portfolio-item.html"><img src="./static/images/clearwater-2.jpg" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/></a>
 					</div>
 					<h2 class="entry-title"><a href="portfolio-item.html" rel="bookmark">Long Walks</a></h2>
 					<a class='portfoliotype' href='portfolio-category.html'>hat</a>
@@ -112,12 +83,48 @@
 					<article class="hentry">
 					<header class="entry-header">
 					<div class="entry-thumbnail">
-						<a href="portfolio-item.html"><img src="./images/March/Urithi-March-7.jpg" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/></a>
+						<a href="portfolio-item.html"><img src="./static/images/clearwater-2.jpg" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/></a>
 					</div>
 					<h2 class="entry-title"><a href="portfolio-item.html" rel="bookmark">Twilight</a></h2>
 					<a class='portfoliotype' href='portfolio-category.html'>hat</a>
 					<a class='portfoliotype' href='portfolio-category.html'>woman</a>
 					<a class='portfoliotype' href='portfolio-category.html'>summer</a>
+					</header>
+					</article>
+					
+					<article class="hentry">
+					<header class="entry-header">
+					<div class="entry-thumbnail">
+						<a href="portfolio-item.html"><img src="./static/images/March/Urithi-march-6.jpg" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/></a>
+					</div>
+					<h2 class="entry-title"><a href="portfolio-item.html" rel="bookmark">Sunset Beach</a></h2>
+					<a class='portfoliotype' href='portfolio-category.html'>summer</a>
+					<a class='portfoliotype' href='portfolio-category.html'>woman</a>
+					<a class='portfoliotype' href='portfolio-category.html'>yellow</a>
+					</header>
+					</article>
+					
+					<article class="hentry">
+					<header class="entry-header">
+					<div class="entry-thumbnail">
+						<a href="portfolio-item.html"><img src="./static/images/Feb/westgate-feb-3.jpg" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/></a>
+					</div>
+					<h2 class="entry-title"><a href="portfolio-item.html" rel="bookmark">Earl of Moreland</a></h2>
+					<a class='portfoliotype' href='portfolio-category.html'>hat</a>
+					<a class='portfoliotype' href='portfolio-category.html'>woman</a>
+					<a class='portfoliotype' href='portfolio-category.html'>yellow</a>
+					</header>
+					</article>
+					
+					<article class="hentry">
+					<header class="entry-header">
+					<div class="entry-thumbnail">
+						<a href="portfolio-item.html"><img src="./static/images/Jan/me-aunty-boy-3.jpg" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/></a>
+					</div>
+					<h2 class="entry-title"><a href="portfolio-item.html" rel="bookmark">Eliza and John</a></h2>
+					<a class='portfoliotype' href='portfolio-category.html'>summer</a>
+					<a class='portfoliotype' href='portfolio-category.html'>woman</a>
+					<a class='portfoliotype' href='portfolio-category.html'>yellow</a>
 					</header>
 					</article>
 					
