--- a/app/templates/portfolio-item.html
+++ b/app/templates/portfolio-item.html
@@ -45,27 +45,73 @@
 		</header>
 		<!-- #masthead -->
 		<div id="content" class="site-content">
-			<div id="primary" class="content-area column full">
+			<div id="primary" class="content-area column two-thirds single-portfolio">
 				<main id="main" class="site-main">
 				
-				<article class="hentry">
+				<article class="portfolio hentry">
 				<header class="entry-header">
-				<h1 class="entry-title">About</h1>	
+				<div class="entry-thumbnail">
+					<img width="800" height="533" src="./static/images/clearwater-1.jpg" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/>
+				</div>
+				<h1 class="entry-title">Sunset Beach</h1>
+				<a class='portfoliotype' href='portfolio-category.html'>summer</a>
+				<a class='portfoliotype' href='portfolio-category.html'>woman</a>
+				<a class='portfoliotype' href='portfolio-category.html'>yellow</a>
 				</header>
-				<!-- .entry-header -->
-
 				<div class="entry-content">
-				<p><img style="border:10px solid #f4f5f6" src="./images/clearwater-1.jpg" alt="bg5" width="430" class="alignright"></p>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-				<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-				<h2 style="font-family: 'Herr Von Muellerhoff';color:#ccc;font-weight:300;">Yours, Von Muellerhoff</h2>
-				</div><!-- .entry-content -->
+					<p>
+						Beautiful young woman in a green dress with curly long hair.
+					</p>
+					<p>
+						There was no possibility of taking a walk that day. We had been wandering, indeed, in the leafless shrubbery an hour in the morning.
+					</p>
+					<blockquote>
+						<p>
+							I was glad of it: I never liked long walks, especially on chilly afternoons: dreadful to me was the coming home in the raw twilight, with nipped fingers and toes, and a heart saddened by the chidings of Bessie, the nurse, and humbled by the consciousness of my physical inferiority to Eliza, John, and Georgiana Reed.
+						</p>
+					</blockquote>
+					<p>
+						The said Eliza, John, and Georgiana were now clustered round their mama in the drawing-room: she lay reclined on a sofa by the fireside, and with her darlings about her (for the time neither quarrelling nor crying) looked perfectly happy.
+					</p>
+				</div>
 				</article>
+				
+				<nav class="navigation post-navigation" role="navigation">
+					<h1 class="screen-reader-text">Post navigation</h1>
+					<div class="nav-links">
+					<div class="nav-previous">
+					<a href="#" rel="prev"> <span class="meta-nav">←</span> Eliza and John</a>
+					</div>
+					<div class="nav-next">
+					<a href="#" rel="next">Sunset Beach <span class="meta-nav">→</span></a>
+					</div>		
+					</div>
+				</nav>
+				<!-- .navigation -->
 				
 				</main>
 				<!-- #main -->
 			</div>
 			<!-- #primary -->
+			
+			<div id="secondary" class="column third">
+				<div class="widget-area">
+					<aside class="widget">
+						<h4 class="widget-title">Request similar project</h4>
+						<form class="wpcf7" method="post" action="contact.php" id="contactform">
+							<div class="form">
+								<p><input type="text" name="name" placeholder="Name *"></p>
+								<p><input type="text" name="email" placeholder="E-mail Address *"></p>
+								<p><textarea name="comment" rows="3" placeholder="Message *"></textarea></p>
+								<input type="submit" id="submit" class="clearfix btn" value="Send">
+							</div>
+						</form>
+						<div class="done">								
+							Your message has been sent. Thank you!
+						</div>
+					</aside>
+				</div>
+			</div>
 		</div>
 		<!-- #content -->
 	</div>
@@ -74,9 +120,9 @@
 	<div class="container">
 		<div class="site-info">
 			<h1 style="font-family: 'Herr Von Muellerhoff';color: #ccc;font-weight:300;text-align: center;margin-bottom:0;margin-top:0;line-height:1.4;font-size: 46px;">Moschino</h1>
-			 <a target="blank" href="https://www.wowthemes.net/">&copy; Moschino - Free HTML Template by WowThemes.net</a>
+			<a target="blank" href="https://www.wowthemes.net/">&copy; Moschino - Free HTML Template by WowThemes.net</a>
 		</div>
-	</div>	
+	</div>
 	</footer>
 	<a href="#top" class="smoothup" title="Back to top"><span class="genericon genericon-collapse"></span></a>
 </div>
@@ -85,5 +131,6 @@
 <script src='js/plugins.js'></script>
 <script src='js/scripts.js'></script>
 <script src='js/masonry.pkgd.min.js'></script>
+<script src='js/validate.js'></script>
 </body>
 </html>
