--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -47,55 +47,21 @@
 		<div id="content" class="site-content">
 			<div id="primary" class="content-area column full">
 				<main id="main" class="site-main">
-				<article id="post-39" class="post-39 page type-page status-publish hentry">
+				
+				<article class="hentry">
 				<header class="entry-header">
-				<h1 class="entry-title">Contact</h1>
+				<h1 class="entry-title">About</h1>	
 				</header>
 				<!-- .entry-header -->
+
 				<div class="entry-content">
-						
-					<!-- BEGIN MAP -->
-					<p><script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script>
-					<div style='overflow:hidden;height:380px;width:100%;'>
-					<div id='gmap_canvas' style='height:380px;width:100%;'></div>
-					<div>embed google maps</a></div>
-					<style>#gmap_canvas img{max-width:none!important;background:none!important}</style>
-					</div>
-					<p><script type='text/javascript'>function init_map(){var myOptions = {zoom:10,center:new google.maps.LatLng(3.4000221,-76.387969),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(3.4000221,-76.387969)});infowindow = new google.maps.InfoWindow({content:'<strong>Jane Photography</strong><br />Florida Beach<br />'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script></p>
-					<!-- END MAP -->
-						
-					<div class="wpcmsdev-columns">
-						<div class="column column-width-one-half">
-							<h4>Quick Contact</h4>						
-							
-							<form class="wpcf7" method="post" action="contact.php" id="contactform">
-								<div class="form">
-									<p><input type="text" name="name" placeholder="Name *"></p>
-									<p><input type="text" name="email" placeholder="E-mail Address *"></p>
-									<p><textarea name="comment" rows="3" placeholder="Message *"></textarea></p>
-									<input type="submit" id="submit" class="clearfix btn" value="Send">
-								</div>
-							</form>
-							<div class="done">								
-								Your message has been sent. Thank you!
-							</div>
-							
-						</div>
-						<div class="column column-width-one-half">
-							<h4>Find Us: (888) 252 389 3571</h4>
-							<p>
-								If you want to hire me or have any feedback or questions about our service in general, please send us a message by completing our enquiry form. It’s best to call though, someone we’ll always be there for you.
-							</p>
-							<p>
-								Monday – Friday: 9am to 5pm<br>
-								Saturday: 10am to 2pm<br>
-								Sunday: Closed
-							</p>
-						</div>
-					</div>
-				</div>
-				<!-- .entry-content -->
+				<p><img style="border:10px solid #f4f5f6" src="./static/images/clearwater-1.jpg" alt="bg5" width="430" class="alignright" alt="image"></p>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+				<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+				<h2 style="font-family: 'Herr Von Muellerhoff';color:#ccc;font-weight:300;">Yours, Von Muellerhoff</h2>
+				</div><!-- .entry-content -->
 				</article>
+				
 				</main>
 				<!-- #main -->
 			</div>
@@ -108,9 +74,9 @@
 	<div class="container">
 		<div class="site-info">
 			<h1 style="font-family: 'Herr Von Muellerhoff';color: #ccc;font-weight:300;text-align: center;margin-bottom:0;margin-top:0;line-height:1.4;font-size: 46px;">Moschino</h1>
-			<a target="blank" href="https://www.wowthemes.net/">&copy; Moschino - Free HTML Template by WowThemes.net</a>
+			 <a target="blank" href="https://www.wowthemes.net/">&copy; Moschino - Free HTML Template by WowThemes.net</a>
 		</div>
-	</div>
+	</div>	
 	</footer>
 	<a href="#top" class="smoothup" title="Back to top"><span class="genericon genericon-collapse"></span></a>
 </div>
@@ -119,6 +85,5 @@
 <script src='js/plugins.js'></script>
 <script src='js/scripts.js'></script>
 <script src='js/masonry.pkgd.min.js'></script>
-<script src='js/validate.js'></script>
 </body>
 </html>
