moved static folder into the app, configured images and links with jinja templates

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -55,7 +55,7 @@
 				<!-- .entry-header -->
 
 				<div class="entry-content">
-				<p><img style="border:10px solid #f4f5f6" src="./static/images/clearwater-1.jpg" alt="bg5" width="430" class="alignright" alt="image"></p>
+				<p><img style="border:10px solid #f4f5f6" src="{% static 'images/Jan/boy' %}" alt="bg5" width="430" class="alignright" alt="image"></p>
 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 				<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
 				<h2 style="font-family: 'Herr Von Muellerhoff';color:#ccc;font-weight:300;">Yours, Von Muellerhoff</h2>
