--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
-	<body class="home page page-template page-template-template-portfolio page-template-template-portfolio-php">
+<body class="home page page-template page-template-template-portfolio page-template-template-portfolio-php">
 	<div id="page">
 		<div class="container">
 			
@@ -14,7 +14,7 @@
 						<article class="hentry">
 						<header class="entry-header">
 						<div class="entry-thumbnail">
-							<a href="portfolio-item.html"><img src="./static/images/Jan/aunty-boy-2.jpg" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/></a>
+							<a href="portfolio-item.html"><img src="{% static 'images/Jan/aunty-boy-2.jpg' %}" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/></a>
 						</div>
 						<h2 class="entry-title"><a href="portfolio-item.html" rel="bookmark">Sunset Beach</a></h2>
 						<a class='portfoliotype' href='portfolio-category.html'>summer</a>
@@ -26,7 +26,7 @@
 						<article class="hentry">
 						<header class="entry-header">
 						<div class="entry-thumbnail">
-							<a href="portfolio-item.html"><img src="./static/images/Jan/boy-2.jpg" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/></a>
+							<a href="portfolio-item.html"><img src="{% static 'images/Jan/me-aunty-boy-3.jpg' %}" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/></a>
 						</div>
 						<h2 class="entry-title"><a href="portfolio-item.html" rel="bookmark">Earl of Moreland</a></h2>
 						<a class='portfoliotype' href='portfolio-category.html'>hat</a>
@@ -38,7 +38,7 @@
 						<article class="hentry">
 						<header class="entry-header">
 						<div class="entry-thumbnail">
-							<a href="portfolio-item.html"><img src="./static/images/Jan/Wonderpark-jan-2.jpg" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="p1"/></a>
+							<a href="portfolio-item.html"><img src="{% static 'images/Jan/boy-2.jpg' %}" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="p1"/></a>
 						</div>
 						<h2 class="entry-title"><a href="portfolio-item.html" rel="bookmark">Eliza and John</a></h2>
 						<a class='portfoliotype' href='portfolio-category.html'>summer</a>
@@ -50,7 +50,7 @@
 						<article class="hentry">
 						<header class="entry-header">
 						<div class="entry-thumbnail">
-							<a href="portfolio-item.html"><img src="./static/images/March/Urithi-march-6.jpg" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="p1"/></a>
+							<a href="portfolio-item.html"><img src="{% static 'images/Jan/boy-2.jpg' %}" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="p1"/></a>
 						</div>
 						<h2 class="entry-title"><a href="portfolio-item.html" rel="bookmark">Hot Afternoon</a></h2>
 						<a class='portfoliotype' href='portfolio-category.html'>pink</a>
@@ -62,7 +62,7 @@
 						<article class="hentry">
 						<header class="entry-header">
 						<div class="entry-thumbnail">
-							<a href="portfolio-item.html"><img src="./static/static/images/March/Urithi-march-4.jpg" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/></a>
+							<a href="portfolio-item.html"><img src="{% static 'images/clearwater-1.jpg' %}" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/></a>
 						</div>
 						<h2 class="entry-title"><a href="portfolio-item.html" rel="bookmark">Long Walks</a></h2>
 						<a class='portfoliotype' href='portfolio-category.html'>hat</a>
@@ -74,7 +74,7 @@
 						<article class="hentry">
 						<header class="entry-header">
 						<div class="entry-thumbnail">
-							<a href="portfolio-item.html"><img src="./static/images/March/Urithi-March-7.jpg" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/></a>
+							<a href="portfolio-item.html"><img src="{% static 'images/march/urithi-march-6.jpg' %}" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/></a>
 						</div>
 						<h2 class="entry-title"><a href="portfolio-item.html" rel="bookmark">Twilight</a></h2>
 						<a class='portfoliotype' href='portfolio-category.html'>hat</a>
