--- a/app/templates/portfolio-category.html
+++ b/app/templates/portfolio-category.html
@@ -59,7 +59,7 @@
 					<article class="hentry">
 					<header class="entry-header">
 					<div class="entry-thumbnail">
-						<a href="portfolio-item.html"><img src="./static/images/Jan/me-boy-2.jpg" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/></a>
+						<a href="portfolio-item.html"><img src="{% static 'images/Jan/boy-2.jpg' %}" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/></a>
 					</div>
 					<h2 class="entry-title"><a href="portfolio-item.html" rel="bookmark">Hot Afternoon</a></h2>
 					<a class='portfoliotype' href='portfolio-category.html'>pink</a>
@@ -71,7 +71,7 @@
 					<article class="hentry">
 					<header class="entry-header">
 					<div class="entry-thumbnail">
-						<a href="portfolio-item.html"><img src="./static/images/clearwater-2.jpg" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/></a>
+						<a href="portfolio-item.html"><img src="{% static 'images/Jan/boy' %}" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/></a>
 					</div>
 					<h2 class="entry-title"><a href="portfolio-item.html" rel="bookmark">Long Walks</a></h2>
 					<a class='portfoliotype' href='portfolio-category.html'>hat</a>
@@ -83,7 +83,7 @@
 					<article class="hentry">
 					<header class="entry-header">
 					<div class="entry-thumbnail">
-						<a href="portfolio-item.html"><img src="./static/images/clearwater-2.jpg" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/></a>
+						<a href="portfolio-item.html"><img src="{% static 'images/Jan/boy' %}" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/></a>
 					</div>
 					<h2 class="entry-title"><a href="portfolio-item.html" rel="bookmark">Twilight</a></h2>
 					<a class='portfoliotype' href='portfolio-category.html'>hat</a>
@@ -95,7 +95,7 @@
 					<article class="hentry">
 					<header class="entry-header">
 					<div class="entry-thumbnail">
-						<a href="portfolio-item.html"><img src="./static/images/March/Urithi-march-6.jpg" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/></a>
+						<a href="portfolio-item.html"><img src="{% static 'images/Jan/boy' %}" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/></a>
 					</div>
 					<h2 class="entry-title"><a href="portfolio-item.html" rel="bookmark">Sunset Beach</a></h2>
 					<a class='portfoliotype' href='portfolio-category.html'>summer</a>
@@ -107,7 +107,7 @@
 					<article class="hentry">
 					<header class="entry-header">
 					<div class="entry-thumbnail">
-						<a href="portfolio-item.html"><img src="./static/images/Feb/westgate-feb-3.jpg" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/></a>
+						<a href="portfolio-item.html"><img src="{% static 'images/Jan/boy' %}" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/></a>
 					</div>
 					<h2 class="entry-title"><a href="portfolio-item.html" rel="bookmark">Earl of Moreland</a></h2>
 					<a class='portfoliotype' href='portfolio-category.html'>hat</a>
@@ -119,7 +119,7 @@
 					<article class="hentry">
 					<header class="entry-header">
 					<div class="entry-thumbnail">
-						<a href="portfolio-item.html"><img src="./static/images/Jan/me-aunty-boy-3.jpg" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/></a>
+						<a href="portfolio-item.html"><img src="{% static 'images/Jan/boy' %}" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/></a>
 					</div>
 					<h2 class="entry-title"><a href="portfolio-item.html" rel="bookmark">Eliza and John</a></h2>
 					<a class='portfoliotype' href='portfolio-category.html'>summer</a>
