--- a/app/templates/portfolio-item.html
+++ b/app/templates/portfolio-item.html
@@ -51,7 +51,7 @@
 				<article class="portfolio hentry">
 				<header class="entry-header">
 				<div class="entry-thumbnail">
-					<img width="800" height="533" src="./static/images/clearwater-1.jpg" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/>
+					<img width="800" height="533" src="{% static 'images/Jan/boy' %}" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/>
 				</div>
 				<h1 class="entry-title">Sunset Beach</h1>
 				<a class='portfoliotype' href='portfolio-category.html'>summer</a>
