--- a/app/templates/blog-single.html
+++ b/app/templates/blog-single.html
@@ -55,7 +55,7 @@
 						<span class="comments-link"><a href="#">Leave a comment</a></span>
 					</div>
 				<div class="entry-thumbnail">					
-					<img src="./static/images/Jan/aunty-boy-2.jpg" alt="image">
+					<img src="{% static 'images/Jan/boy' %}" alt="image">
 				</div>
 				</header>
 				<!-- .entry-header -->
@@ -134,7 +134,7 @@
 					<h4 class="widget-title">About Me</h4>
 					<div class="textwidget">
 						<p>
-							<img src="./static/images/Jan/me-aunty-boy-3.jpg" class="alignleft" style="width:80px;border-radius:50%;margin-bottom:0;"> I'm a professional photographer for 10 years. It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+							<img src="{% static 'images/Jan/boy' %}" class="alignleft" style="width:80px;border-radius:50%;margin-bottom:0;"> I'm a professional photographer for 10 years. It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
 						</p>
 					</div>
 					</aside>
