--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,10 +16,10 @@
 						<div class="entry-thumbnail">
 							<a href="portfolio-item.html"><img src="{% static 'images/Jan/aunty-boy-2.jpg' %}" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/></a>
 						</div>
-						<h2 class="entry-title"><a href="portfolio-item.html" rel="bookmark">Sunset Beach</a></h2>
+						<h2 class="entry-title"><a href="portfolio-item.html" rel="bookmark">Aunty and Boy</a></h2>
 						<a class='portfoliotype' href='portfolio-category.html'>summer</a>
 						<a class='portfoliotype' href='portfolio-category.html'>woman</a>
-						<a class='portfoliotype' href='portfolio-category.html'>yellow</a>
+						<a class='portfoliotype' href='portfolio-category.html'>yellow KM</a>
 						</header>
 						</article>
 						
