created a blog model and view and updated the blog template with queries,created detailed_view template

--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -14,28 +14,31 @@
 					<main id="main" class="site-main" role="main">
 						<div class="grid bloggrid">
 						
+						{% for blog in blogs %}
 							<article>
 								<header class="entry-header">
-									<h1 class="entry-title"><a href="blog-single.html" rel="bookmark">Somewhere in time</a></h1>
+									<h1 class="entry-title"><a href="blog-single.html" rel="bookmark">{{blog.title}}</a></h1>
 									<div class="entry-meta">
-										<span class="posted-on"><time class="entry-date published">April 12, 2016</time></span>						
-										<span class="comments-link"><a href="#">Leave a comment</a></span>
+										<span class="posted-on"><time class="entry-date published">{{blog.date_created}}</time></span>						
+										{% comment %} <span class="comments-link"><a href="#">Leave a comment</a></span> {% endcomment %}
 									</div>
 									<div class="entry-thumbnail">						
-										<img src="{% static 'images/Jan/boy-2.jpg' %}" alt="image">
+										<img src="{{blog.image.url}}" alt="image">
 									</div>
 							</header>
 								<div class="entry-summary">
 									<p>
-										When Mary Lennox was sent to Manor to live with her uncle everybody said she was the most disagreeablelooking child ever seen. It was true, too. She had a little thin face and a little thin body, thin light hair and a sour expression. Her hair was yellow, and her face was yellow because she <a class="more-link" href="blog-single.html">Read more</a>
+{{blog.content}} <a class="more-link" href="blog-single.html">Read more</a>
 									</p>
 								</div>
-								<footer class="entry-footer">
+								{% comment %} <footer class="entry-footer">
 								<span class="cat-links">
 								Posted in <a href="#" rel="category tag">audio</a>, <a href="#" rel="category tag">embed</a>, <a href="#" rel="category tag">media</a>
 								</span>
-								</footer>
+								</footer> {% endcomment %}
 							</article>
+
+						{% endfor %}
 							
 						</div>
 					<div class="clearfix">
