--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -10,21 +10,21 @@
 		<div id="content" class="site-content">
 			<div id="primary" class="content-area column full">
 				<main id="main" class="site-main">
-				
-				<article class="hentry">
-				<header class="entry-header">
-				<h1 class="entry-title">About</h1>	
-				</header>
-				<!-- .entry-header -->
+					{% for about in about %}
+					<article class="hentry">
+						<header class="entry-header">
+						  <h1 class="entry-title">{{about.title}}</h1>	
+						</header>
+						<!-- .entry-header -->
 
-				<div class="entry-content">
-				<p><img style="border:10px solid #f4f5f6" src="{% static 'images/clearwater-1.jpg' %}" alt="bg5" width="430" class="alignright" alt="image"></p>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-				<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-				<h2 style="font-family: 'Herr Von Muellerhoff';color:#ccc;font-weight:300;">Yours, Shay Mamosebetsi Kekae</h2>
-				</div><!-- .entry-content -->
-				</article>
-				
+						<div class="entry-content">
+							<p><img style="border:10px solid #f4f5f6" src="{{about.image.url}}" alt="bg5" width="430" class="alignright" alt="image"></p>
+							<p>{{about.description}}</p>
+							{% comment %} <p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p> {% endcomment %}
+							<h2 style="font-family: 'Herr Von Muellerhoff';color:#ccc;font-weight:300;">Yours, Shay Mamosebetsi Kekae</h2>
+						</div><!-- .entry-content -->
+					</article>
+				{% endfor %}
 				</main>
 				<!-- #main -->
 			</div>
