--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,13 +16,17 @@
 							<article class="hentry">
 								<header class="entry-header">
 									<div class="entry-thumbnail">
-										<a href="portfolio-item.html"><img src="{{photos.image.url}}" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/></a>
+										<a href="{% url 'photo_detail' photos.id %}">
+											<img src="{{ photos.image.url }}" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/>
+										</a>
 									</div>
-									<h2 class="entry-title"><a href="portfolio-item.html" rel="bookmark">{{photos.title}}</a></h2>
+									<h2 class="entry-title">
+										<a href="{% url 'photo_detail' photos.id %}">{{ photos.title }}</a>
+									</h2>
 									{% if photos.category %}
-										<a class='portfoliotype' href='portfolio-category.html'>{{photos.category.month}}</a>
-										<a class='portfoliotype' href='portfolio-category.html'>{{photos.category.venue}}</a>
-										<a class='portfoliotype' href='portfolio-category.html'>{{photos.category.race}} KM</a>
+									<a class="portfoliotype" href="#">{{ photos.category.month }}</a>
+									<a class="portfoliotype" href="#">{{ photos.category.venue }}</a>
+									<a class="portfoliotype" href="#">{{ photos.category.race }} KM</a>
 									 {% endif %} 
 								</header>
 							</article>
